--- a/package.json
+++ b/package.json
@@ -17,16 +17,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -39,5 +35,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "8.28.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-plugin-react": "7.31.11"
   }
 }
